fix problem with white spaces between elements. Correct spelling in home view. change foute name route for  'cooling solutions'. Add scroling to top of view in cart buttons in home view

--- a/src/components/views/Integration/Integration.module.scss
+++ b/src/components/views/Integration/Integration.module.scss
@@ -18,51 +18,35 @@
 .integration,
 .design,
 .execution {
-  padding: 120px 0 40px 0;
+  padding: 120px 0 90px 0;
   text-align: left;
 }
 
 .integration {
-  min-height: 100vh;
-
   @include flex(column, center, center);
+  min-height: 80vh;
 }
 
 .design {
-  min-height: 100vh;
   @include flex(row, center, center);
+  background-color: var(--color-grey);
+  min-height: 80vh;
 
   .designCarts {
     @include flex(row, flex-start, space-between);
     flex-wrap: wrap;
     padding: 50px 0 0 0;
     flex-grow: 1;
-    gap: 30px;
+    gap: 50px;
 
     .cart {
+      background-color: var(--color-light);
       @include flex(column, space-between, center);
       flex-grow: 1;
 
       @include md-max {
         width: 100%;
-      }
-
-      .imgWrap {
-        width: 300px;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 30px;
-
-        img {
-          object-fit: contain;
-          width: 170px;
-          height: 100%;
-
-          @include sm-max {
-            height: 200px;
-            width: 100%;
-          }
-        }
+        // min-height: 100vh;
       }
 
       .header {
@@ -73,11 +57,9 @@
         background-color: var(--color-dark);
         color: var(--color-light);
         padding: 10px 20px;
-        width: 300px;
 
         @include md-max {
           height: auto;
-          width: 100%;
         }
       }
 
@@ -89,8 +71,6 @@
         gap: 20px;
         @include flex(column, flex-start, flex-start);
         transition: var(--transition);
-        width: 300px;
-
         height: 270px;
 
         @include md-max {
